--- a/李崇維_HW/李崇維_HW.csproj
+++ b/李崇維_HW/李崇維_HW.csproj
@@ -89,11 +89,11 @@
     <Compile Include="6.Main.Designer.cs">
       <DependentUpon>6.Main.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="FrmTreeView練習.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="FrmTreeView練習.Designer.cs">
+      <DependentUpon>FrmTreeView練習.cs</DependentUpon>
     </Compile>
     <Compile Include="NorWindDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -129,8 +129,8 @@
     <EmbeddedResource Include="7.FrmTestTreeViewListView.resx">
       <DependentUpon>7.FrmTestTreeViewListView.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="FrmTreeView練習.resx">
+      <DependentUpon>FrmTreeView練習.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
